--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "kvell-db-plugin-mongoose": "^1.0.1-alpha.9.3.1",
     "kvell-db-plugin-sequelize": "^1.0.1-alpha.9.3.1",
     "kvell-scripts": "1.0.1-alpha.9.3.1",
+    "mongoose-paginate": "^5.0.3",
     "mv": "^2.1.1"
   },
   "eslintConfig": {
