--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "celebrate": "^12.2.0",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "delivery": "0.0.6",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
@@ -20,7 +23,8 @@
     "kvell-db-plugin-sequelize": "^1.0.1-alpha.9.3.1",
     "kvell-scripts": "1.0.1-alpha.9.3.1",
     "mongoose-paginate": "^5.0.3",
-    "mv": "^2.1.1"
+    "mv": "^2.1.1",
+    "socket.io": "^4.1.3"
   },
   "eslintConfig": {
     "extends": "kvell-scripts"
